Adding Sun's code for connection handlers. With the modern JDKs normal code cannot natively access to internal packages like sun.*** any more. To make xtest use indipendent by specifying exports in the command line (e.g. -add-exports java.base/sun.net=ALL-UNNAMED), the relevant Sun's classes have been repacked as ste.xtest sub packages.